--- a/ChatDemoUI3.0/res/layout/activity_guide.xml
+++ b/ChatDemoUI3.0/res/layout/activity_guide.xml
@@ -1,42 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_guide"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black_deep"
-    tools:context="com.hyphenate.chatuidemo.ui.GuideActivity">
-
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/colorPrimary">
 
     <ImageView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_logo"
-        android:layout_alignParentTop="true"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="112dp"
-        android:id="@+id/imageView2" />
-
+        android:src="@drawable/icon_logo" />
     <Button
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2"
+        android:id="@+id/btn_login"
+        android:layout_width="140dp"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:background="#7CCD7C"
-        android:text="@string/login"
-        android:layout_marginTop="20dp"
-        android:id="@+id/button" />
-
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="165dp"
+        android:text="登录"
+        android:background="#459F3F"/>
     <Button
+        android:id="@+id/btn_register"
+        android:layout_width="140dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="110dp"
+        android:text="注册"
+        android:background="#C7C7C7"/>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:id="@+id/button1"
-        android:text="sign up"
-        android:layout_below="@+id/button"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button" />
 </RelativeLayout>
