--- a/ChatDemoUI3.0/res/layout/em_activity_main.xml
+++ b/ChatDemoUI3.0/res/layout/em_activity_main.xml
@@ -6,18 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/common_bg">
+    android:layout_height="match_parent">
 
     <include android:id="@+id/layout_title" layout="@layout/view_layout_title"/>
     <cn.ucai.superwechat.widget.MFViewPager
         android:id="@+id/layout_viewpage"
         android:layout_below="@id/layout_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="48dp">
     </cn.ucai.superwechat.widget.MFViewPager>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/white"
         android:layout_alignParentBottom="true">
         <View
             android:layout_width="match_parent"
@@ -25,7 +28,9 @@
             android:background="#D6DCDC"/>
         <cn.ucai.superwechat.widget.DMTabHost
             android:layout_width="match_parent"
-            android:layout_height="47dp">
+            android:id="@+id/layout_tabhost"
+            android:layout_height="47dp"
+            android:paddingBottom="1dp">
             <cn.ucai.superwechat.widget.DMTabButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
